--- a/src/app/features/auth/register/register.component.scss
+++ b/src/app/features/auth/register/register.component.scss
@@ -1,82 +1,5 @@
-:host {
-    display: flex;
-    flex-direction: column;
-
-    min-height: 100vh;
-    // min-height: 100%;
-
-    background-image: url('/assets/images/bg-desktop-pink.png');
-    // background-size: cover;
-    background-size: contain;
-}
-
-.navbar {
-    display: flex;
-    justify-content: flex-end;
-
-    padding: 1rem;
-}
-
-.main {
-    padding: 0 1.2rem 1.2rem 1.2rem;
-}
-
-.logo {
-    display: grid;
-    place-items: center;
-    margin-bottom: 1rem;
-    
-    > button {
-        background-color: var(--green-dark-color);
-
-        font-size: clamp(2rem, 0.0000rem + 4.1667vw, 5rem);
-        color: var(--light-text);
-        
-        padding: 0.5em 1em;
-        border-radius: 15px;
-        
-        box-shadow: 0px 1px 3px #303030;
-        font-weight: 500;
+@media (min-width: 48rem) {
+    .register-card {
+        max-width: 480px;
     }
-}
-
-.container {
-    display: flex;
-    justify-content: center;
-}
-
-.card {
-    flex-basis: 700px;
-
-   > mat-card-title {
-       padding-top: 1rem;
-   }
-    
-    > mat-card-content {
-        padding: 1rem;
-        padding-top: 0.5rem;
-    }
-}
-
-.card-title {
-    text-align: center;
-    font-weight: 500;
-
-    margin-bottom: 1rem;
-}
-
-.form {
-    display: flex;
-    flex-direction: column;
-}
-
-.buttons {
-    display: grid;
-    place-items: center;
-    // gap: 0.5rem;
-}
-
-.register-button {
-    background-color: var(--purple-color);
-    color: var(--light-text);
 }
