--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -3,7 +3,7 @@
 }
 
 .mat-sidenav-content {
-    background-image: url('/assets/images/bg1-425x756.jpg');
+    background-image: url('/assets/images/bg1-1920x1080.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: bottom center;
@@ -31,11 +31,12 @@
 
     background-color: hsl(var(--clr-blue-dark), .7);
     backdrop-filter: blur(5px);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 @media (min-width: 48rem) {
     .mat-sidenav-content {
-        background-image: url('/assets/images/bg1-1920x1080.jpg');
         gap: 1;
     }
 
