--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -41,15 +41,22 @@
     --p-y: .45em;
 }
 
+.rounded-button,
+.circle-button {
+    transition: transform .07s ease-in;
+}
+
 .rounded-button:hover,
 .circle-button:hover {
     transform: scale(1.025);
 }
 
 .header_on-scroll {
-    background-color: hsl(var(--clr-white-98), .95);
-    backdrop-filter: blur(5px);
+    background-color: hsl(var(--clr-white-98), .9);
+    backdrop-filter: blur(10px);
     box-shadow: 0 3px 4px rgba(0, 0, 0, .2);
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
 
     .rounded-button:not(.active) {
         --bg-color: hsl(var(--clr-white-98));
@@ -63,4 +70,12 @@
 .active {
     --bg-color: hsl(var(--clr-blue));
     --text-color: hsl(var(--clr-white));
+}
+
+@media (min-width: 64rem) {
+    .header_on-scroll {
+        background-color: hsl(var(--clr-white-98), .8);
+        border-bottom-left-radius: 7px;
+        border-bottom-right-radius: 7px;
+    }
 }
