--- a/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
+++ b/src/app/shared/components/navigation-sidenav/navigation-sidenav.component.html
@@ -8,7 +8,7 @@
       <a [routerLink]="['/posts/list']" class="navbar__link p-l-container" routerLinkActive="active"
         (click)="hideSidenav()">
         <mat-icon>search</mat-icon>
-        <span>Planificaciones</span>
+        <span>Buscar</span>
       </a>
     </li>
     <li *ngIf="!authUser">
