feat(scroll-to-top): add new button

--- a/src/app/features/posts/post-detail/post-detail.component.html
+++ b/src/app/features/posts/post-detail/post-detail.component.html
@@ -181,4 +181,6 @@
       <p class="fs-small">Pronto permitiremos previsualizar más arhivos en Planishare 👀</p>
     </div>
   </div>
+
+  <app-scroll-to-top-button></app-scroll-to-top-button>
 </main>
