refactor(styles): create files for styles

--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -1,9 +1,11 @@
+@import './design/components/index';
 @import './design/reset';
 @import './design/fonts';
-@import './design/components';
+
 @import './helpers/util';
 @import './helpers/misc';
 @import './helpers/display';
 @import './helpers/box-model';
+
 @import './material/overloads';
 @import './design/colors';
