--- a/src/app/shared/components/scroll-to-top-button/scroll-to-top-button.component.html
+++ b/src/app/shared/components/scroll-to-top-button/scroll-to-top-button.component.html
@@ -1,4 +1,4 @@
 <button mat-mini-fab class="bg-blue-dark" aria-label="Volver al comienzo" (click)="scrollToTop()"
-  *ngIf="(windowScroll.scrollYPos$|async)! > heightToShow" @inOutRight>
+  *ngIf="(windowScroll.scrollYPos$|async)! > heightToShow" @fadeInOut>
   <mat-icon>arrow_upward</mat-icon>
 </button>
