--- a/src/app/features/posts/posts-list/posts-list.component.html
+++ b/src/app/features/posts/posts-list/posts-list.component.html
@@ -1,5 +1,5 @@
 <app-posts-filters
-    [pageInfo]="pageInfo"
+    [pageResults]="pageResults"
     [urlQueryParams]="urlQueryParams"
     [isLoading]="isLoading"
     [authUser]="authUser"
