refactor(post-list): divide logic in other components

--- a/src/app/features/posts/components/post-card/post-card.component.html
+++ b/src/app/features/posts/components/post-card/post-card.component.html
@@ -45,9 +45,9 @@
   </div>
 
   <div class="flex-wrap gap-025">
-    <span class="rounded-button-slim fs-small bg-text-academic-level">{{ post.academicLevel.name }}</span>
-    <span class="rounded-button-slim fs-small bg-text-axis">{{ post.axis.name }}</span>
-    <span class="rounded-button-slim fs-small bg-text-subject">{{ post.axis.subject.name }}</span>
+    <span class="fw-700 rounded-button-slim fs-small bg-text-academic-level">{{ post.academicLevel.name }}</span>
+    <span class="fw-700 rounded-button-slim fs-small bg-text-axis">{{ post.axis.name }}</span>
+    <span class="fw-700 rounded-button-slim fs-small bg-text-subject">{{ post.axis.subject.name }}</span>
   </div>
 
   <div class="flex-space_between-center">
