--- a/src/app/features/posts/posts-list/posts-list.component.html
+++ b/src/app/features/posts/posts-list/posts-list.component.html
@@ -14,8 +14,8 @@
         [authUser]="authUser"
         [currentFilters]="currentFilters"
         [urlQueryParams]="urlQueryParams"
-        (changePage)="changePage = { changePage: $event }"
-        (removeFilter)="removeFilter = { removeFilter: $event }"
+        (changePage)="changePage = { value: $event }"
+        (removeFilter)="removeFilter = { value: $event }"
     ></app-post-paginated-list>
 </main>
 <app-scroll-to-top-button></app-scroll-to-top-button>
