fix(navbar): fix profile icon

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -52,7 +52,7 @@
                     <button class="circle-button box-shadow-1" matRipple
                         [matMenuTriggerFor]="menu"
                         aria-label="Menu de perfil">
-                            <mat-icon>person</mat-icon>
+                            <mat-icon class="fw-300">person</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
                         <button mat-menu-item [routerLink]="['/user/edit-profile']">
