fix(user.model): fix full name

--- a/src/app/features/posts/components/post-card/post-card.component.html
+++ b/src/app/features/posts/components/post-card/post-card.component.html
@@ -1,7 +1,7 @@
 <div class="rounded-card flex-column flex-space_between gap-07" *ngIf="post">
   <div>
     <div class="flex-space_between-center">
-      <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
+      <p>{{ post.user.fullName ?? post.user.email }} - {{ post.createdAt|timeAgo }}</p>
 
       <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones">
         <mat-icon class="text-blue-dark">more_vert</mat-icon>
