--- a/src/app/features/posts/components/user-posts-stats/user-posts-stats.component.html
+++ b/src/app/features/posts/components/user-posts-stats/user-posts-stats.component.html
@@ -1,7 +1,7 @@
 <div class="rounded-card m-b-05">
   <div class="flex-center-center m-b-05 gap-05">
     <h1 class="fs-large">Mis publicaciones</h1>
-    <a mat-icon-button class="text-blue" aria-label="Crear publicación" matTooltip="Crear publicación"
+    <a mat-icon-button class="text-blue" aria-label="Crear publicación"
       [routerLink]="['/posts/create']">
       <mat-icon>add</mat-icon>
     </a>
