fix(planishare): avoid use of window-scroll service

--- a/src/app/features/posts/components/post-filters-card/post-filters-card.component.scss
+++ b/src/app/features/posts/components/post-filters-card/post-filters-card.component.scss
@@ -1,5 +1,5 @@
 .filters-card {
-    background-color: hsl(var(--clr-blue-dark), .9);
+    background-color: hsl(var(--clr-grey-dark), .9);
     padding: .5rem 1rem;
 }
 
