--- a/src/app/features/posts/pages/post-form/post-form.component.scss
+++ b/src/app/features/posts/pages/post-form/post-form.component.scss
@@ -19,7 +19,7 @@
 
 
 .upload-area {
-    border: 3px hsl(var(--clr-blue-dark)) dashed;
+    border: 3px hsl(var(--clr-grey-dark)) dashed;
     border-radius: 10px;
     padding: 1rem;
     text-align: center;
