--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,6 @@
 .loader {
     height: 100vh;
-    
+    background-color: hsl(var(--clr-white-old));
     display: grid;
     place-items: center;
-
-    background-image: url('/assets/images/bg1-1920x1080.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: bottom center;
 }
