--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -3,10 +3,7 @@
 }
 
 .mat-sidenav-content {
-    background-image: url('/assets/images/bg1-1920x1080.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: bottom center;
+    background-color: hsl(var(--clr-white-old));
 
     display: grid;
     grid-template-rows: min-content 1fr;
@@ -29,7 +26,7 @@
     width: 100%;
     max-width: 224px;
 
-    background-color: hsl(var(--clr-blue-dark), .7);
+    background-color: hsl(var(--clr-grey-dark), .7);
     backdrop-filter: blur(5px);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
