--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="header" [ngClass]="{'header_on-scroll': onScroll}">
+<header class="header">
   <div class="container">
 
     <!-- Mobile navbar -->
@@ -19,38 +19,38 @@
     <nav *ngIf="isDesktop">
       <ul class="navbar__list fs-regular fw-700">
         <li *ngIf="!authUser">
-          <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/auth/register']" routerLinkActive="active">
+          <a class="rounded-button" matRipple [routerLink]="['/auth/register']" routerLinkActive="active">
             <mat-icon>person_add</mat-icon>
             <span>Registrarse</span>
           </a>
         </li>
         <li *ngIf="!authUser">
-          <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/auth/login']" routerLinkActive="active">
+          <a class="rounded-button" matRipple [routerLink]="['/auth/login']" routerLinkActive="active">
             <mat-icon>login</mat-icon>
             <span>Iniciar Sesión</span>
           </a>
         </li>
         <li *ngIf="authUser">
-          <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/posts/user', authUser.id]"
+          <a class="rounded-button" matRipple [routerLink]="['/posts/user', authUser.id]"
             routerLinkActive="active">
             <mat-icon>description</mat-icon>
             <span>Mis publicaciones</span>
           </a>
         </li>
         <li *ngIf="authUser">
-          <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/posts/create']" routerLinkActive="active">
+          <a class="rounded-button" matRipple [routerLink]="['/posts/create']" routerLinkActive="active">
             <mat-icon>control_point</mat-icon>
             <span>Crear publicación</span>
           </a>
         </li>
         <li>
-          <a class="rounded-button box-shadow-1" matRipple [routerLink]="['/posts/list']" routerLinkActive="active">
+          <a class="rounded-button" matRipple [routerLink]="['/posts/list']" routerLinkActive="active">
             <mat-icon>search</mat-icon>
             <span>Buscar</span>
           </a>
         </li>
         <li *ngIf="authUser">
-          <button class="circle-button box-shadow-1" matRipple [matMenuTriggerFor]="menu" aria-label="Menu de perfil">
+          <button class="circle-button" matRipple [matMenuTriggerFor]="menu" aria-label="Menu de perfil">
             <mat-icon class="fw-300">person</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
