--- a/src/assets/styles/design/components/_tags.scss
+++ b/src/assets/styles/design/components/_tags.scss
@@ -30,8 +30,8 @@
 
 .small-border-tag-undefined,
 .border-tag-undefined {
-    border-color: hsl(var(--clr-blue-dark));
-    color: hsl(var(--clr-blue-dark));
+    border-color: hsl(var(--clr-grey-dark));
+    color: hsl(var(--clr-grey-dark));
 }
 
 .small-border-tag-red,
