--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -60,5 +60,5 @@
     border-radius: 12px !important;
     background-color: hsl(var(--clr-white), .7);
     backdrop-filter: blur(20px);
-    color: hsl(var(--clr-blue-dark), .8);
+    color: hsl(var(--clr-grey-dark), .8);
 }
